examples/neg/boolean_wrong_name.effekt
module boolean_wrong_name

def alwaysTrue(): Boolean = true